--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -66,4 +66,5 @@ WORKDIR /usr/local/go
 
 #Angular CLI
 #RUN npm install -g @angular/cli
-RUN npm install --save-dev @angular-devkit/build-angular
+#RUN npm install --save-dev @angular-devkit/build-angular
+RUN npm install
